# hiven

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
doc/: 2026-06-03-plugin-sdk-injection-and-i18n.md  2026-06-12-core-plugin-externalization-plan.md  2026-06-12-plugin-settings-and-web-quick-open-design.md  2026-06-14-plugin-ui-surfaces-and-clipboard-history-design.md  2026-06-15-app-launcher-design.md  2026-06-24-json-semantic-diff-algorithm-design.md  builtin-script-auto-inference.md  diff-feature-design-questions.md  diff-plugin-boundary-decision.md  flux-component-spec-amber.html  flux-spatial-component-spec.html  flux-spatial-interactive-demo.html  hiven-all-in-one.html  hiven-launcher-v3.html  instant-suggestion-plugin-design.md  multi-pane-diff-and-selection-plan.md  pinned-action-live-runner.md  plugin-directory-convention.md  plugin-storage-sqlite-migration.md  plugin-system-phased-roadmap.md  prd.md  roadmap-global-command-workbench.md  workspace-extension-architecture.md
doc/archive/: flux-ui-mockup-gpt5-spatial-combined.html  flux-ui-mockup-gpt5-strict.html  (+18 more)
fluxtext-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
fluxtext-app/src-tauri/: Cargo.toml  tauri.conf.json
fluxtext-app/src-tauri/capabilities/: default.json
fluxtext-app/src-tauri/src/: lib.rs
scripts/: check-architecture.mjs  test-app-launcher-contract.mjs  test-auto-diff-mode.mjs  test-calculator-command-mode.mjs  test-clipboard-history-boundary.mjs  test-clipboard-history-integration.mjs  test-clipboard-history-logic.mts  test-clipboard-history-runtime.mjs  test-clipboard-history-settings.mjs  test-clipboard-history-storage.mjs  test-command-optional-params.mjs  test-command-palette-extension-settings.mjs  test-command-palette-page-policy.mjs  test-command-palette-system-page-shortcuts.mjs  test-command-status-bar.mjs  test-context-snapshot-editor.mjs  test-core-plugin-externalization.mjs  test-date-time-assistant.mjs  test-directory-plugin-convergence.mjs  test-editor-shell-selection-safety.mjs  test-editor-topbar-plugin-detail.mjs  test-editor-window-launch.mjs  test-global-hotkey-settings.mjs  test-global-launcher-quick-text.mjs  test-global-launcher-system-power-actions.mjs  test-global-launcher-v3-ui.mjs  test-global-launcher-window-height.mjs  test-global-pinned-launcher.mjs  test-hiven-brand-migration.mjs  test-ime-enter-confirmation.mjs  test-instant-suggestion-multiple-results.mjs  test-json-semantic-diff.mjs  test-launcher-back-focus.mjs  test-launcher-controller.mjs  test-launcher-host-boundaries.mjs  test-launcher-identity.mjs  test-launcher-plugin-contract.mjs  test-launcher-ranking.mjs  test-launcher-registry.mjs  test-launcher-shared-session.mjs  (+37 more)
src/: App.tsx  configInit.ts  fluxtext.d.ts  hiven.d.ts  i18n.ts  index.css  main.tsx  plugin-sdk.ts  plugin-ui-icons.ts  plugin-ui.tsx  pluginHostCore.ts  pluginHostSdk.ts  store.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: hiven-helper-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: helper_ipc.rs  hotkeys.rs  lib.rs
wiki/: action-api-reference.md  builtin-script-guidelines.md
(+446 files in other folders)
