[package]
name = "hiven"
version = "0.2.55"
description = "hiven — A command-driven text processing workbench"
authors = ["hiven"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "hiven"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
zip = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[profile.dev]
debug = 1  # 行号级别调试信息，减少约 30-50% 构建体积
